# hft-orderbook-engine

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  ROADMAP.md
benchmarks/: CMakeLists.txt  bench_latency.cpp  bench_matching.cpp  bench_orderbook.cpp  bench_spsc.cpp
cmake/: CompilerFlags.cmake  Dependencies.cmake
data/: README.md  btcusdt_l3_sample.csv  generate_l3_data.py  multi_instrument_l3_sample.csv  sample_fix42.txt
grafana/: README.md  docker-compose.yml
grafana/dashboards/: hft-depth-impact.json  hft-overview.json
grafana/provisioning/dashboards/: provider.yml
grafana/provisioning/datasources/: influxdb.yml
grafana/scripts/: ingest.py  launch.ps1  launch.sh
python/: CMakeLists.txt
python/bindings/: analytics_bindings.cpp  converters.h  core_bindings.cpp  module.cpp  orderbook_bindings.cpp  replay_bindings.cpp
python/examples/: analytics_demo.py  multi_instrument.py  simple_replay.py
scripts/: run_benchmarks.ps1
src/: CMakeLists.txt
src/analytics/: CMakeLists.txt  analytics_config.h  analytics_engine.cpp  analytics_engine.h  depth_profile.cpp  depth_profile.h  microprice_calculator.cpp  microprice_calculator.h  multi_instrument_analytics.cpp  multi_instrument_analytics.h  order_flow_imbalance.cpp  order_flow_imbalance.h  price_impact.cpp  price_impact.h  realized_volatility.cpp  realized_volatility.h  spread_analytics.cpp  spread_analytics.h
src/core/: CMakeLists.txt  order.h  price_level.h  trade.h  types.h
src/feed/: CMakeLists.txt  fix_message.h  fix_parser.cpp  fix_parser.h  fix_serializer.cpp  fix_serializer.h  l3_feed_parser.cpp  l3_feed_parser.h  multi_instrument_replay_engine.cpp  multi_instrument_replay_engine.h  replay_engine.cpp  replay_engine.h
src/gateway/: CMakeLists.txt  instrument_registry.cpp  instrument_registry.h  instrument_router.cpp  instrument_router.h  market_data_publisher.cpp  market_data_publisher.h  order_gateway.cpp  order_gateway.h
src/main/: replay_main.cpp
src/matching/: CMakeLists.txt  match_result.h  matching_engine.cpp  matching_engine.h
src/orderbook/: CMakeLists.txt  flat_order_map.h  memory_pool.h  order_book.cpp  order_book.h
src/transport/: CMakeLists.txt  event_buffer.h  message.h  spsc_ring_buffer.h
src/utils/: CMakeLists.txt  clock.h  latency_histogram.h
tests/: CMakeLists.txt  test_analytics.cpp  test_fix_protocol.cpp  test_gateway.cpp  test_instrument_router.cpp  test_l3_replay.cpp  test_matching_engine.cpp  test_memory_pool.cpp  test_multi_instrument_replay.cpp  test_order.cpp  test_order_book.cpp  test_spsc_ring_buffer.cpp  test_utils.cpp
